--- a/public/style1.css
+++ b/public/style1.css
@@ -194,3 +194,24 @@ footer{
     margin-top: 5px;
     color: #fff;
 }
+
+@media (max-width: 480px) {
+    .update-p {
+      margin-left: 180px;
+    }
+    
+    .btn1, .btn2 {
+      padding-left: 60px;
+      padding-right: 60px;
+    }
+    
+    .btn2 .img-btn2 {
+      margin-left: 20px;
+    }
+    
+    .btn2 span {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+  }
+  
